// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayEditorPage /> renders correctly  with a currentPlay 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "right",
      "bottom",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#232b2b",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={
            Object {
              "height": 833.75,
              "width": 750,
            }
          }
        >
          <View
            style={
              Object {
                "height": 833.75,
                "width": 750,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 708.6875,
                    "left": 712.5,
                    "top": 41.6875,
                    "width": 3.375,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 708.6875,
                    "left": 37.5,
                    "top": 41.6875,
                    "width": 3.375,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 3.375,
                    "left": 37.5,
                    "top": 41.6875,
                    "width": 675,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 3.375,
                    "left": 37.5,
                    "top": 325.1625,
                    "width": 675,
                  },
                ]
              }
            />
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 33.75,
                  },
                  Array [
                    Object {
                      "color": "#A6A6A6",
                      "position": "absolute",
                    },
                    Object {
                      "left": 358.125,
                      "top": 541.1375,
                    },
                  ],
                  Object {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰅖
            </Text>
          </View>
          <View
            height="100%"
            style={
              Object {
                "left": 0,
                "position": "absolute",
                "top": 0,
              }
            }
            width="100%"
          />
        </View>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginHorizontal": 10,
                  "opacity": 1,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#232b2b",
                      "fontSize": 42,
                    },
                    undefined,
                    Object {
                      "fontFamily": "material-community",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰐊
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "gray",
                      "height": 5,
                      "position": "absolute",
                      "top": 10,
                    },
                    Object {
                      "width": 307.5,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "backgroundColor": "black",
                    "height": 5,
                    "position": "absolute",
                    "top": 10,
                    "width": 0,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "gray",
                      "borderRadius": 15,
                      "height": 15,
                      "position": "absolute",
                      "top": 5,
                      "width": 15,
                    },
                    Object {
                      "left": 0,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "gray",
                      "borderRadius": 15,
                      "height": 15,
                      "position": "absolute",
                      "top": 5,
                      "width": 15,
                    },
                    Object {
                      "left": 307.5,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "backgroundColor": "black",
                    "borderRadius": 15,
                    "height": 15,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  }
                }
              />
              <View
                style={
                  Object {
                    "backgroundColor": "black",
                    "borderRadius": 15,
                    "height": 15,
                    "left": 307.5,
                    "opacity": 0,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  }
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "position": "absolute",
                      "top": 25,
                    },
                    Object {
                      "left": 3,
                    },
                  ]
                }
              >
                1
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "position": "absolute",
                      "top": 25,
                    },
                    Object {
                      "left": 310.5,
                    },
                  ]
                }
              >
                2
              </Text>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "height": "100%",
                    "left": -7.5,
                    "opacity": 1,
                    "position": "absolute",
                    "width": 30,
                  }
                }
              />
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "height": "100%",
                    "left": 300,
                    "opacity": 1,
                    "position": "absolute",
                    "width": 30,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "marginHorizontal": 10,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#232b2b",
                        "fontSize": 30,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰐖
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#232b2b",
                        "fontSize": 30,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰍵
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": "12%",
            "marginHorizontal": 10,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "row",
              },
              Object {
                "alignItems": "center",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 30,
                "justifyContent": "space-around",
                "position": "absolute",
                "width": "100%",
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 80,
                  "width": "45%",
                }
              }
            >
              <RNCPicker
                items={
                  Array [
                    Object {
                      "label": "Rectangle",
                      "textColor": undefined,
                      "value": "rectangle",
                    },
                    Object {
                      "label": "Endzone",
                      "textColor": undefined,
                      "value": "endzone",
                    },
                    Object {
                      "label": "3/4 field",
                      "textColor": undefined,
                      "value": "three quarters field",
                    },
                    Object {
                      "label": "Empty",
                      "textColor": undefined,
                      "value": "empty",
                    },
                  ]
                }
                onChange={[Function]}
                selectedIndex={1}
                style={
                  Array [
                    Object {
                      "height": 216,
                    },
                    Object {
                      "fontSize": 14,
                      "height": 80,
                    },
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-evenly",
                  "marginLeft": 20,
                  "width": "45%",
                }
              }
            >
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "backgroundColor": "#2a9e91",
                      },
                      Object {
                        "borderRadius": 0,
                        "height": 0,
                        "width": 0,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "backgroundColor": "#000000",
                      },
                      Object {
                        "borderRadius": 0,
                        "height": 0,
                        "width": 0,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "white",
                        "borderColor": "black",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "borderRadius": 0,
                        "borderWidth": 0,
                        "height": 0,
                        "width": 0,
                      },
                    ]
                  }
                />
              </View>
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderBottomColor": "#feae19",
                        "borderColor": "transparent",
                        "borderStyle": "solid",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "borderBottomWidth": 0,
                        "borderLeftWidth": 0,
                        "borderRightWidth": 0,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "height": 0,
                        "width": 0,
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#232b2b",
        "flexDirection": "row",
        "height": "8%",
        "justifyContent": "space-evenly",
        "minHeight": 40,
        "width": "100%",
      }
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#fff",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰨸
        </Text>
      </View>
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        transparent={true}
        useNativeDriver={true}
        visible={false}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "elevation": 10,
                "maxHeight": "80%",
                "maxWidth": "80%",
                "padding": 20,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 3.84,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 20,
                  "textAlign": "center",
                }
              }
            >
              My Playbook
            </Text>
            <RCTScrollView
              ListEmptyComponent={[Function]}
              data={Array []}
              disableVirtualization={false}
              getItem={[Function]}
              getItemCount={[Function]}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              onContentSizeChange={[Function]}
              onEndReachedThreshold={2}
              onLayout={[Function]}
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              stickyHeaderIndices={Array []}
              style={
                Object {
                  "flexGrow": 0,
                }
              }
              updateCellsBatchingPeriod={50}
              viewabilityConfigCallbackPairs={Array []}
              windowSize={21}
            >
              <View>
                <View>
                  <Text>
                    You haven't saved any plays yet
                  </Text>
                </View>
              </View>
            </RCTScrollView>
            <View
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": Array [
                    Object {
                      "translateY": 48,
                    },
                  ],
                  "zIndex": 99,
                }
              }
            />
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#2a9e91",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "center",
                  "marginTop": 20,
                  "opacity": 1,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                  "width": 120,
                }
              }
              testID="button"
            >
              <Text
                style={
                  Object {
                    "color": "#2a9e91",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                Back
              </Text>
            </View>
          </View>
        </View>
      </Modal>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="newButton"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "material-community",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰐕
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="saveButton"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "material-community",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰆓
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#A6A6A6",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
          testID="undoButton"
        >
          󰕍
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#A6A6A6",
                "fontSize": 30,
              },
              Object {
                "marginLeft": 20,
              },
              Object {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
          testID="redoButton"
        >
          󰑏
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="shareButton"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "material-community",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰒖
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`<PlayEditorPage /> renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "right",
      "bottom",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#232b2b",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={
            Object {
              "height": 833.75,
              "width": 750,
            }
          }
        >
          <View
            style={
              Object {
                "height": 833.75,
                "width": 750,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 708.6875,
                    "left": 712.5,
                    "top": 41.6875,
                    "width": 3.375,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 708.6875,
                    "left": 37.5,
                    "top": 41.6875,
                    "width": 3.375,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 3.375,
                    "left": 37.5,
                    "top": 41.6875,
                    "width": 675,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#232b2b",
                    "borderWidth": 1,
                    "position": "absolute",
                  },
                  Object {
                    "height": 3.375,
                    "left": 37.5,
                    "top": 325.1625,
                    "width": 675,
                  },
                ]
              }
            />
            <Text />
          </View>
          <View
            height="100%"
            style={
              Object {
                "left": 0,
                "position": "absolute",
                "top": 0,
              }
            }
            width="100%"
          />
        </View>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginHorizontal": 10,
                  "opacity": 1,
                }
              }
            >
              <Text />
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "gray",
                      "height": 5,
                      "position": "absolute",
                      "top": 10,
                    },
                    Object {
                      "width": 307.5,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "backgroundColor": "black",
                    "height": 5,
                    "position": "absolute",
                    "top": 10,
                    "width": 0,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "gray",
                      "borderRadius": 15,
                      "height": 15,
                      "position": "absolute",
                      "top": 5,
                      "width": 15,
                    },
                    Object {
                      "left": 0,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "gray",
                      "borderRadius": 15,
                      "height": 15,
                      "position": "absolute",
                      "top": 5,
                      "width": 15,
                    },
                    Object {
                      "left": 307.5,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "backgroundColor": "black",
                    "borderRadius": 15,
                    "height": 15,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  }
                }
              />
              <View
                style={
                  Object {
                    "backgroundColor": "black",
                    "borderRadius": 15,
                    "height": 15,
                    "left": 307.5,
                    "opacity": 0,
                    "position": "absolute",
                    "top": 5,
                    "width": 15,
                  }
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "position": "absolute",
                      "top": 25,
                    },
                    Object {
                      "left": 3,
                    },
                  ]
                }
              >
                1
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "position": "absolute",
                      "top": 25,
                    },
                    Object {
                      "left": 310.5,
                    },
                  ]
                }
              >
                2
              </Text>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "height": "100%",
                    "left": -7.5,
                    "opacity": 1,
                    "position": "absolute",
                    "width": 30,
                  }
                }
              />
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "height": "100%",
                    "left": 300,
                    "opacity": 1,
                    "position": "absolute",
                    "width": 30,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "marginHorizontal": 10,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <Text />
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": "12%",
            "marginHorizontal": 10,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "row",
              },
              Object {
                "alignItems": "center",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 30,
                "justifyContent": "space-around",
                "position": "absolute",
                "width": "100%",
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 80,
                  "width": "45%",
                }
              }
            >
              <RNCPicker
                items={
                  Array [
                    Object {
                      "label": "Rectangle",
                      "textColor": undefined,
                      "value": "rectangle",
                    },
                    Object {
                      "label": "Endzone",
                      "textColor": undefined,
                      "value": "endzone",
                    },
                    Object {
                      "label": "3/4 field",
                      "textColor": undefined,
                      "value": "three quarters field",
                    },
                    Object {
                      "label": "Empty",
                      "textColor": undefined,
                      "value": "empty",
                    },
                  ]
                }
                onChange={[Function]}
                selectedIndex={1}
                style={
                  Array [
                    Object {
                      "height": 216,
                    },
                    Object {
                      "fontSize": 14,
                      "height": 80,
                    },
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-evenly",
                  "marginLeft": 20,
                  "width": "45%",
                }
              }
            >
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "backgroundColor": "#2a9e91",
                      },
                      Object {
                        "borderRadius": 0,
                        "height": 0,
                        "width": 0,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "backgroundColor": "#000000",
                      },
                      Object {
                        "borderRadius": 0,
                        "height": 0,
                        "width": 0,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontWeight": "bold",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "white",
                        "borderColor": "black",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "borderRadius": 0,
                        "borderWidth": 0,
                        "height": 0,
                        "width": 0,
                      },
                    ]
                  }
                />
              </View>
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexBasis": "25%",
                    "height": "100%",
                    "justifyContent": "center",
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderBottomColor": "#feae19",
                        "borderColor": "transparent",
                        "borderStyle": "solid",
                        "justifyContent": "center",
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "borderBottomWidth": 0,
                        "borderLeftWidth": 0,
                        "borderRightWidth": 0,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "height": 0,
                        "width": 0,
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#232b2b",
        "flexDirection": "row",
        "height": "8%",
        "justifyContent": "space-evenly",
        "minHeight": 40,
        "width": "100%",
      }
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text />
      </View>
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        transparent={true}
        useNativeDriver={true}
        visible={false}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "elevation": 10,
                "maxHeight": "80%",
                "maxWidth": "80%",
                "padding": 20,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 3.84,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 20,
                  "textAlign": "center",
                }
              }
            >
              My Playbook
            </Text>
            <RCTScrollView
              ListEmptyComponent={[Function]}
              data={Array []}
              disableVirtualization={false}
              getItem={[Function]}
              getItemCount={[Function]}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              onContentSizeChange={[Function]}
              onEndReachedThreshold={2}
              onLayout={[Function]}
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              stickyHeaderIndices={Array []}
              style={
                Object {
                  "flexGrow": 0,
                }
              }
              updateCellsBatchingPeriod={50}
              viewabilityConfigCallbackPairs={Array []}
              windowSize={21}
            >
              <View>
                <View>
                  <Text>
                    You haven't saved any plays yet
                  </Text>
                </View>
              </View>
            </RCTScrollView>
            <View
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": Array [
                    Object {
                      "translateY": 48,
                    },
                  ],
                  "zIndex": 99,
                }
              }
            />
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#2a9e91",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "center",
                  "marginTop": 20,
                  "opacity": 1,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                  "width": 120,
                }
              }
              testID="button"
            >
              <Text
                style={
                  Object {
                    "color": "#2a9e91",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                Back
              </Text>
            </View>
          </View>
        </View>
      </Modal>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="newButton"
    >
      <Text />
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="saveButton"
    >
      <Text />
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text />
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="shareButton"
    >
      <Text />
    </View>
  </View>
</RNCSafeAreaView>
`;
